--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ltn.com"
+baseURL = "https://latest-tech.netlify.app/"
 languageCode = "en-us"
 title = "LTN - Latest Tech News"
 
