--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "/"
   publish = "public"
-  command = "hugo --gc --minify"
+  command = "hugo"
 
 [context.production.environment]
   HUGO_VERSION = "0.121.2"  
